# rustic_vex

./: Makefile  project.pros
rustic_pros/: Cargo.toml  send.sh
rustic_pros/src/: controller.rs  lib.rs  libc.rs  motor.rs  pros.rs  vex_logger.rs
rustic_pros/src/controller/: inputs.rs
rustic_pros/src/libc/: stdio.rs
rustic_pros/src/pros/: adi.rs  colors.rs  distance.rs  error.rs  gps.rs  imu.rs  link.rs  misc.rs  motors.rs  optical.rs  rotation.rs  rtos.rs  serial.rs  vision.rs
src/: main.c
