[package]
name = "rustic_pros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-alloc = "0.5.0"
no-std-compat = { version = "0.4.1", features = ["alloc"] }
panic-halt = "0.2.0"
