[package]
name = "rustic_pros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", default-features = false }
cstr_core = "0.2.6"
emballoc = "0.1.2"
enum-iterator = "1.2.0"
log = "0.4.17"
no-std-compat = { version = "0.4.1", features = ["alloc"] }
panic-halt = "0.2.0"
